--- a/style.css
+++ b/style.css
@@ -3,9 +3,22 @@ body {
 }
 
 footer {
+	position: fixed;
 	background-color: #3c7a47;
+    left: 0;
+    bottom: 0;
+    border: 4px solid black;
+    width: calc(100% - 8px);
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
 }
 
 .light {
-	text-color: white;
+	color: white;
+}
+
+.centered {
+	justify-content: center;
 }
