--- a/style.css
+++ b/style.css
@@ -6,9 +6,26 @@ footer {
 	background-color: #3c7a47;
 	border: 4px solid black;
 	
-	position: fixed;
+	position: absolute;
     left: 0;
     bottom: 0;
+    
+    width: calc(100% - 8px);
+    height: auto;
+    
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+
+
+.head {
+    background-color: #3c7a47;
+    border: 4px solid black;
+    
+    position: sticky;
+    left: 0;
+    top: 0;
     
     width: calc(100% - 8px);
     height: 10%;
@@ -16,7 +33,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items:center;
-}
+
 
 .light {
 	color: white;
