--- a/style.css
+++ b/style.css
@@ -1,44 +1,57 @@
+:root {
+	--head-h: 0;
+	--content-h: 0;
+	--footer-h: 0;
+}
+
 body {
 	background-color: #6fbf7e;
-}
-
-footer {
-	background-color: #3c7a47;
-	border: 4px solid black;
 	
-	position: absolute;
-    left: 0;
-    bottom: 0;
-    
-    width: calc(100% - 8px);
-    height: auto;
-    
-    display: flex;
-    flex-direction: column;
-    align-items:center;
+	display: flex;
+	flex-direction: column;
+	
+	position: relative;
+	min-height: 100vh;
+	
+	margin: 0px;
 }
 
+div {
+	box-sizing: border-box;
+	
+}
 
 .head {
-    background-color: #3c7a47;
-    border: 4px solid black;
-    
     position: sticky;
-    left: 0;
-    top: 0;
     
-    width: calc(100% - 8px);
-    height: 10%;
+    width: 100%;
+    margin: 0% 0px 0%;
     
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-
-
-.light {
-	color: white;
+    max-height: 100px;
+    padding: 10px;
+    
+    background-color: darkgray;
 }
 
-.centered {
-	justify-content: center;
+.content {
+	flex-grow: 1;
+	
+	width: 90%;
+	
+	margin: 0% auto 0%;
+	
+	padding: 10px;
+	
+	background-color: gray;
+}
+
+.footer {	
+	width: 90%;
+	margin: 0% auto;
+	
+	background-color: lightgray;
+	
+	padding: 10px;
+	    
+    text-align: center;
 }
