--- a/style.css
+++ b/style.css
@@ -1,53 +1,30 @@
-:root {
-	--head-h: 0;
-	--content-h: 0;
-	--footer-h: 0;
-	
-}
+
+
 
 @font-face {
-  font-family: 'Material Symbols Outlined';
+  font-family: 'mso';
   font-style: normal;
   font-weight: 400;
-  src: url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
+  src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v222/kJF1BvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oDMzByHX9rA6RzaxHMPdY43zj-jCxv3fzvRNU22ZXGJpEpjC_1v-p_4MrImHCIJIZrDCvHOej.woff2) format('woff2'), url(../resources/fonts/MaterialSymbolsOutlined[FILL,GRAD,opsz,wght].woff2) format('woff2');
 }
 
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(https://asherhausam.com/resources/fonts/MaterialSymbolsOutlined[FILL,GRAD,opsz,wght].woff2) format('woff2'),
-    url(https://asherhausam.com/resources/fonts/MaterialSymbolsOutlined[FILL,GRAD,opsz,wght].ttf) format('truetype');
-}
-
-.material-icons .mco {
-  font-family: 'Material Icons';
+.mso {
+  font-family: 'mso';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
-  display: inline-block;
+  font-size: 24px;
   line-height: 1;
-  text-transform: none;
   letter-spacing: normal;
-  word-wrap: normal;
+  text-transform: none;
+  display: inline-block;
   white-space: nowrap;
+  word-wrap: normal;
   direction: ltr;
-
-  /* Support for all WebKit browsers. */
+  -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-  /* Support for IE. */
-  font-feature-settings: 'liga';
 }
 
-a.mso span.mso {
-	text-decoration: none;
-}
+
 
 body {
 	background-color: #6fbf7e;
