--- a/style.css
+++ b/style.css
@@ -10,24 +10,44 @@
 
 .mso {
   font-family: 'mso';
-  font-weight: normal;
   font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
+  font-size: 80px;
   display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+  
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48;
 }
 
+span.size-20 {
+  font-size: 80px;
+  font-variation-settings: 'opsz' 20, 'wght' 800;
+  font-weight: 350;
+}
+
+@font-face {
+	font-family: 'os';
+	
+	src: url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'), url(../resources/fonts/OpenSans-VariableFont_wdth,wght.ttf) format('truetype'), local('Open Sans');
+}
+
+.os {
+  font-family: "os", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 
 
 body {
 	background-color: #6fbf7e;
+	
+	font-family: "os";
 	
 	display: flex;
 	flex-direction: column;
