--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@
     'opsz' 48;
 }
 
+.mso.link {
+	position:relative;
+	top:3px;
+	right:3px;
+}
+
 @font-face {
 	font-family: 'os';
 	
@@ -39,7 +45,7 @@
 
 
 body {
-	background-color: rgb(35,35,35);
+	background-color: rgb(45,45,45);
 	
 	font-family: "os";
 	font-size: 24px;
@@ -55,8 +61,9 @@ body {
 
 div {
 	box-sizing: border-box;
-	
 }
+
+
 
 .head {
     position: sticky;
@@ -67,28 +74,120 @@ div {
     max-height: 100px;
     padding: 10px;
     
-    background-color: rgb(50,50,50);
+    color:white;
+    background-color: rgb(15,15,15);
+}
+
+.head p{
+	position:relative;
+	left:1em;
+}
+
+.head a:link {
+    color:rgb(255,255,255);
+    text-decoration:none;
+}
+
+.head a:visited {
+    color:rgb(255,255,255);
+    text-decoration:none;
+}
+
+.head a:hover {
+    background-color: rgb(40,40,40);
+}
+
+.title {
+	width: 75%;
+    max-width: 1440px;
+	
+	margin: 1em auto 1em;
+	
+}
+
+.title td {
+	color:rgb(255,240,230);
+    font-size: 18.5px;
+    
+    margin-top: 0em;
+    text-align: left;
+}
+
+.title th.name {
+	color:rgb(255,240,230);
+    font-size: 45px;
+    font-weight: bold;
+    
+    margin-top: 1em;
+    margin-bottom: 0em;
+    text-align: left;
+    
+    border-style: none none solid;
+    border-width: 2px;
+}
+
+.title td.date {
+	border-spacing: 0em;
+	padding: 0em;
+}
+
+.title td.version {
+	font-weight: bold;
+	text-align: left;
 }
 
 .content {
 	flex-grow: 1;
 	
-	width: 90%;
+	width: 75%;
+	max-width: 64em;
 	
-	margin: 0% auto 0%;
+	margin: 0% auto 0%;	
+	padding: 0.5em;
 	
-	padding: 10px;
+	background-color: rgb(255,240,230);
+	border-radius: 20px;
+}
+
+.content h2 {
+	font-size: 34px;
 	
-	background-color: rgb(230,220,180);
+	border-style: none none solid;
+	border-width: 2px;
+	
+	display: table-cell;
+}
+
+.content p {
+	font-size: 28px;
+	text-align: left;
 }
 
 .footer {	
-	width: 90%;
-	margin: 0% auto;
+	width: 75%;
+	max-width: 60em;
 	
-	background-color: rgb(50,50,50);
-	
-	padding: 10px;
-	    
     text-align: center;
+	color: white;
+	
+	margin: 0% auto;
+	padding: 10px;
+    
+    background-color: rgb(15,15,15);
+}
+
+
+
+.footer a:link {
+	color:white;
+	text-decoration:none;
+}
+
+.footer a:visited {
+	color:white;
+	text-decoration:none;
+}
+
+.footer a:hover {
+    color:grey;
 }
