--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 html {
 	width:100%;
+	max-width:100%;
 }
 
 @font-face {
@@ -59,6 +60,7 @@ body {
 	min-height: 100vh;
 	
 	width:100%;
+	max-width:100%;
 	
 	margin: 0px;
 }
