--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
 	width:100%;
 	max-width:100%;
+	margin: 0;
 }
 
 @font-face {
@@ -105,7 +106,7 @@ div {
 
 .title {
 	width: 75%;
-    max-width: 1440px;
+    max-width: 64em;
 	
 	margin: 1em auto 1em;
 }
@@ -175,7 +176,7 @@ div {
 	border-width: 2px;
 	
 	font-size: 34px;
-	font-weight: 600;
+	font-weight: bold;
 	
 }
 
