--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ html {
     right:0.15em;
 }
 
+
+
 @font-face {
 	font-family: 'os';
 	
@@ -198,6 +200,18 @@ div {
 div.note{
 	border: 2px solid white;
 	padding: 2px;
+}
+
+a.blend {
+	color:inherit
+}
+
+a.blend a:link {
+    color:inherit;
+}
+
+a.blend a:visited {
+    color:inherit;
 }
 
 .bug a:link {
