Blog updates, portal shenanigans

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>Asher Hausam - BLOG TEMP</title>
-	<link rel="stylesheet" href="https://asherhausam.com/style/blog-style.css">
+	<link rel="stylesheet" href="https://asherhausam.com/style.css">
     <link rel="stylesheet" href="/style.css">
     
 </head>
 <body>
     <script src="https://asherhausam.com/scripts/loadUpdatingContent.js"></script>
-    <script src="../scripts/loadUpdatingContent.js"></script>
+    <script src="/scripts/loadUpdatingContent.js"></script>
     <script>window.onload = updateLinks;</script>
 
 	<div class="head" id="top">
@@ -27,7 +27,7 @@
 	
 	<div class="content">	
 		
-		<h2>Blog Title</h2>
+		<h2>Blog Header</h2>
 		
 		<p>Blog content</p>
 	</div>
@@ -36,6 +36,7 @@
 	<div class="footer">
 	   <p>Check out my socials!</p>
 	   <p id="socials"></p>
+	   <p id="update"></p>
 	</div>
 	
 </body>
