--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+/* Amazing debug tool, outlines all objects
+*, *::before, *::after { outline: solid 1px red; }
+*/
 
 html {
-	width:100%;
-	max-width:100%;
+	width:auto;
 	margin: 0;
 }
 
@@ -51,6 +53,8 @@ html {
 
 
 body {
+	margin: 0;
+	
 	background-color: rgb(45,45,45);
 	
 	font-family: "os";
@@ -64,8 +68,6 @@ body {
 	
 	width:100%;
 	max-width:100%;
-	
-	margin: 0px;
 }
 
 div {
@@ -90,6 +92,7 @@ div {
 .head p{
 	position:relative;
 	left:1em;
+	width:fit-content;
 }
 
 .head a:link {
