Updated all footers and headers

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -12,7 +12,7 @@
     <script>window.onload = updateLinks;</script>
 
 	<div class="head" id="top">
-        <p id="top_bar"></p>
+        <p id="top_bar"><a href="https://asherhausam.com"><span class="mso fit" >home</span></a></p>
     </div>
 	 
 	<div class="title">
@@ -34,7 +34,6 @@
 	
 	
 	<div class="footer">
-	   <p>Check out my socials!</p>
 	   <p id="socials"></p>
 	   <p id="update"></p>
 	</div>
